Add doPrivileged block for specifyStreamHandler NetPermission