@@ -37,6 +37,9 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLStreamHandler;
+import java.security.AccessController;
+import java.security.PrivilegedActionException;
+import java.security.PrivilegedExceptionAction;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Enumeration;
@@ -467,20 +470,35 @@ public class VFSUtils {
      *
      * @param file the virtual file
      * @return the URL
-     * @throws MalformedURLException if the file cannot be coerced into a URL for some reason
+     * @throws Exception if the file cannot be coerced into a URL for some reason
      * @see VirtualFile#asDirectoryURL()
      * @see VirtualFile#asFileURL()
      */
-    public static URL getVirtualURL(VirtualFile file) throws MalformedURLException {
+    public static URL getVirtualURL(VirtualFile file) throws Exception {
         try {
-            URI uri = getVirtualURI(file);
+            final URI uri = getVirtualURI(file);
             String scheme = uri.getScheme();
-            if (VFS_PROTOCOL.equals(scheme)) {
-                return new URL(null, uri.toString(), VFS_URL_HANDLER);
-            } else if ("file".equals(scheme)) {
-                return new URL(null, uri.toString(), FILE_URL_HANDLER);
-            } else {
-                return uri.toURL();
+            try {
+                if (VFS_PROTOCOL.equals(scheme)) {
+                    return AccessController.doPrivileged(new PrivilegedExceptionAction<URL>() {
+                        public URL run() throws Exception {
+                            return new URL(null, uri.toString(), VFS_URL_HANDLER);
+                        }
+
+                    });
+                } else if ("file".equals(scheme)) {
+
+                    return AccessController.doPrivileged(new PrivilegedExceptionAction<URL>() {
+                        public URL run() throws Exception {
+                            return new URL(null, uri.toString(), FILE_URL_HANDLER);
+                        }
+
+                    });
+                } else {
+                    return uri.toURL();
+                }
+            } catch (PrivilegedActionException pe) {
+                throw pe.getException();
             }
         } catch (URISyntaxException e) {
             throw new MalformedURLException(e.getMessage());
